--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cs340_project",
-  "proxy": "https://gravityfalluniversity.herokuapp.com/",
+  "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
